Added Characters and Character components Added Api and CharacterService services Cleaned up spacing in many files

--- a/wwwroot/app/home/home.html
+++ b/wwwroot/app/home/home.html
@@ -9,23 +9,28 @@
 </div>
 <div class="container">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-3">
 			<h2>Races</h2>
 			<p>Check out the great races in your area.</p>
 			<p><a class="btn btn-default" href="#" role="button">more »</a></p>
 
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-3">
 			<h2>Gear</h2>
 			<p>Shop for gear in our store.</p>
 			<p><a class="btn btn-default" href="#" role="button">more »</a></p>
 
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-3">
 			<h2>People</h2>
 			<p>A list of our great runners</p>
 			<p><button class="btn btn-default" (click)="goToPeople()">more »</button></p>
 
+		</div>
+        <div class="col-md-3">
+			<h2>Characters</h2>
+			<p>A list of Doug's Nerdfest Characters</p>
+			<p><button class="btn btn-default" (click)="goToCharacters()">more »</button></p>
 		</div>
 	</div>
 </div>
