--- a/wwwroot/app/app.html
+++ b/wwwroot/app/app.html
@@ -15,6 +15,7 @@
                 <li><a [routerLink]="['Home']" href="">Home</a></li>
                 <li><a [routerLink]="['People']" href="">People</a></li>
                 <li><a [routerLink]="['About']" href="">About</a></li>
+                <li><a [routerLink]="['Characters']" href="">Characters</a></li>
             </ul>
         </div>
     </div>
