Added CharacterController - used as an API passthrough for another API Updated character components to use CharacterService's new Api-based calls

--- a/wwwroot/app/characters/character.html
+++ b/wwwroot/app/characters/character.html
@@ -1,3 +1,12 @@
-<div *ngIf="data">
+<div class="card" *ngIf="data">
 	<h2>{{data.name}}</h2>
+    <div>{{data.race.name}}</div>
+    <div *ngFor="#attr of data.attributes">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-6 col-sm-2 col-lg-1">{{attr.name}}</div>
+                <div class="col-xs-6 col-sm-2 col-lg-1">d{{(attr.value*2)+4}}</div>
+            </div>
+        </div>
+    </div>
 </div>
